# MI_HW

./: .gitignore  README.md
BIGHW/: README.md
BIGHW/androidplayer/: settings.gradle.kts
Day01/: README.md  Test01.txt
Day01/gdb/: README.md  bt.txt  main.cpp  ptr
Day01/hello/: README.md  hello  main.cpp  makefile  makefile_副本  printHello.cpp  printHello.h
Day01/screenshot/: README.md
Day02/: README.md
Day02/HW1/: CMakeLists.txt  README.md  Rectangle.cpp  Rectangle.h  main.cpp  (+2 more)
Day03/: README.md
Day04/: README.md
Day05/: README.md
Day06/: README.md  q.txt
Day07/: README.md
Day10/AiAssist/app/src/main/cpp/: CMakeLists.txt  assist.cpp
Day10/AiAssist/app/src/main/cpp/cJSON/fuzzing/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  fuzz_main.vcxproj  fuzz_main.vcxproj.filters
Day10/AiAssist/app/src/main/cpp/cJSON/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cjson_add.vcxproj  cjson_add.vcxproj.filters  cmake_install.cmake  compare_tests.vcxproj  compare_tests.vcxproj.filters  minify_tests.vcxproj  minify_tests.vcxproj.filters  misc_tests.vcxproj  misc_tests.vcxproj.filters  parse_array.vcxproj  parse_array.vcxproj.filters  parse_examples.vcxproj  parse_examples.vcxproj.filters  parse_hex4.vcxproj  parse_hex4.vcxproj.filters  parse_number.vcxproj  parse_number.vcxproj.filters  parse_object.vcxproj  parse_object.vcxproj.filters  parse_string.vcxproj  parse_string.vcxproj.filters  parse_value.vcxproj  parse_value.vcxproj.filters  parse_with_opts.vcxproj  parse_with_opts.vcxproj.filters  print_array.vcxproj  print_array.vcxproj.filters  print_number.vcxproj  print_number.vcxproj.filters  print_object.vcxproj  print_object.vcxproj.filters  print_string.vcxproj  print_string.vcxproj.filters  print_value.vcxproj  print_value.vcxproj.filters  readme_examples.vcxproj  readme_examples.vcxproj.filters  (+2 more)
Day10/classroom-base/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Day10/classroom-base/include/: Logging.h  ProcessInfo.h  TimeZone.h
Day10/classroom-base/src/: Logging.cc  ProcessInfo.cc  Thread.cc  TimeZone.cc
Day10/learn-http/: CMakeLists.txt  main.cpp
Day10/learn-http/include/: download.h  get.h
Day10/learn-http/libghttp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Day10/learn-http/src/: download.cpp  get.cpp
(+251 files in other folders)
